--- a/cleva-request-api/src/main/resources/_TEMPLATE_application.properties
+++ b/cleva-request-api/src/main/resources/_TEMPLATE_application.properties
@@ -1,6 +1,10 @@
 spring.profiles.active=@spring.profiles.active@
 build.version=@project.version@
 
+# SETTING logging.path & logging.file.path ALLOWS YOU TO USE ${LOG_PATH} (some apps use logging.path, other logging.file.path... don't know why)
+logging.path=YOUR_LOG_PATH
+logging.file.path=${logging.path}
+
 spring.datasource.url=YOUR_DB_URL
 spring.datasource.username=YOUR_DB_USERNAME
 spring.datasource.password=YOUR_DB_PASSWORD
@@ -8,3 +12,5 @@ spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.open-in-view=false
+
+extranet.courtier.endpoint.url=PATH_TO_EXTRANET_COURTIER_RETRIEVE_CONTRACTS_INFOS
